--- a/themes/geek/layout/category.ejs
+++ b/themes/geek/layout/category.ejs
@@ -1,4 +1,3 @@
-
 <div class="category-container">
   <h2 class="category-title">
     <% if (is_category()) { %>
@@ -11,12 +10,12 @@
   <div class="category-list">
     <% site.categories.each(function(category){ %>
       <div class="category-item">
-        <h2 class="category-name">
+        <div class="category-name">
           <a href="<%- url_for(category.path) %>">
             <%= category.name %>
             <span class="category-count">(<%= category.posts.length %>)</span>
           </a>
-        </h2>
+        </div>
         <% if (is_category() && category.name === page.category) { %>
           <div class="category-posts">
             <% category.posts.each(function(post){ %>
