add new feature: add background colour of inner code

--- a/themes/geek/layout/layout.ejs
+++ b/themes/geek/layout/layout.ejs
@@ -35,5 +35,6 @@
 
   <script src="/js/search.js"></script>
   <script src="/js/main.js"></script>
+  <script src="/js/copy-code.js"></script>
 </body>
 </html>
