修改代码主题

--- a/themes/geek/layout/layout.ejs
+++ b/themes/geek/layout/layout.ejs
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title><%= config.title %></title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/prism-code.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" href="https://od.009100.xyz/api/raw/?path=/picture/Icon/shark.png" type="image/x-icon">
 </head>
@@ -36,5 +37,6 @@
   <script src="/js/search.js"></script>
   <script src="/js/main.js"></script>
   <script src="/js/copy-code.js"></script>
+  <script src="/js/prism.js"></script>
 </body>
 </html>
