--- a/themes/geek/layout/layout.ejs
+++ b/themes/geek/layout/layout.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/prism-code.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" href="https://od.009100.xyz/api/raw/?path=/picture/Icon/shark.png" type="image/x-icon">
+  <link rel="stylesheet" href="/css/toc.css">
 </head>
 <body>
   <header>
@@ -38,5 +39,6 @@
   <script src="/js/main.js"></script>
   <script src="/js/copy-code.js"></script>
   <script src="/js/prism.js"></script>
+  <script src="/js/toc-highlight.js"></script>
 </body>
 </html>
