--- a/themes/geek/layout/page.ejs
+++ b/themes/geek/layout/page.ejs
@@ -1,4 +1,13 @@
 <div class="page-container">
+  <% if (page.toc) { %>
+    <div class="toc-card">
+      <div class="toc-content">
+        <h2>Table of Contents</h2>
+        <%- toc(page.content, {list_number: false}) %>
+      </div>
+    </div>
+  <% } %>
+  
   <article class="page-content">
     <h1 class="page-title"><%= page.title %></h1>
     <div class="page-body">
