--- a/themes/geek/layout/layout.ejs
+++ b/themes/geek/layout/layout.ejs
@@ -32,7 +32,12 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 <%= config.title %></p>
+    <p>
+      &copy; 2024 <%= config.title %> 
+      <a href="https://github.com/eddiehex/hexo-geek-source" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+    </p>
   </footer>
 
   <script src="/js/search.js"></script>
