--- a/themes/geek/source/css/style.css
+++ b/themes/geek/source/css/style.css
@@ -754,6 +754,16 @@ footer p {
   font-size: 0.9rem;
 }
 
+footer a {
+  color: inherit;
+  text-decoration: none;
+  margin-left: 8px;
+}
+
+footer a:hover {
+  color: #666;
+}
+
 /* Code Block Styles */
 pre {
   position: relative !important;
