--- a/themes/geek/layout/layout.ejs
+++ b/themes/geek/layout/layout.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= config.title %></title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/prism-code.css">
@@ -35,10 +36,6 @@
   <main>
     <%- body %>
   </main>
-
-  <div class="toc-toggle">
-    <i class="fas fa-list"></i>
-  </div>
 
   <footer>
     <p>
