--- a/themes/geek/layout/index.ejs
+++ b/themes/geek/layout/index.ejs
@@ -220,6 +220,12 @@
   margin: 1rem 0;
 }
 
+.post-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .read-info {
   display: flex;
   align-items: center;
